# Numerical_Optimization

./: .gitignore  README.md
project1/: CMakeLists.txt  ReadMe.md  main.cpp  main.m  problem.hpp  run.sh
project1/common/: config_flags.cc  config_flags.hpp  logger.cc  logger.hpp
project1/modules/base/: CMakeLists.txt  cost_fuction.hpp
project1/modules/unconstrained_optimization/: CMakeLists.txt  steepest_gradient_descent.cc  steepest_gradient_descent.hpp
project1/results/: recorder.txt
project1/unit_testing/: CMakeLists.txt  opt_sgd_test.cpp
project2/gcopter/: CMakeLists.txt  ReadMe.md
project2/gcopter/config/: global_planning.rviz
project2/gcopter/include/gcopter/: cubic_spline.hpp  geo_utils.hpp  lbfgs.hpp  path_smoother.hpp
